--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "connectify": "file:..",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
